<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"


    >


   <Button
       android:id="@+id/btn_contents"
       android:layout_width="150dp"
       android:layout_height="50dp"
       android:layout_centerHorizontal="true"
       android:text="@string/btn_contents"
       android:textSize="25dp"
       android:layout_marginTop="50dp"



       />
   <Button
       android:id="@+id/btn_search"
       android:layout_width="150dp"
       android:layout_height="50dp"
       android:layout_centerHorizontal="true"
       android:layout_below="@id/btn_contents"
       android:layout_marginTop="5dp"
       android:text="@string/btn_search"
       android:textSize="25dp"
       />

   <Button
       android:id="@+id/btn_favorite"
       android:layout_width="150dp"
       android:layout_height="50dp"
       android:layout_centerHorizontal="true"
       android:layout_below="@id/btn_search"
       android:layout_marginTop="5dp"
       android:text="@string/title_bookmark"
       android:textSize="20dp"

       />

</RelativeLayout>