<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".Search"

    >

    <TextView
        android:id="@+id/search_activity_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/search_in"
        android:textSize="30dp"
        android:gravity="center_vertical"

        />

    <RadioGroup
        android:id="@+id/rad_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/search_activity_title"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:background="@color/dark_orange"
        >
        <RadioButton
            android:id="@+id/rad_btn_chapters"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search_in_chapters_sections"
            android:textSize="20dp"



            />
        <RadioButton
            android:id="@+id/rad_btn_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search_in_text"
            android:textSize="20dp"
            />

    </RadioGroup>
    <LinearLayout
        android:id="@+id/searvh_linear_ed_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/rad_group"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/search_img"

            />
        <EditText
            android:id="@+id/ed_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:background="@color/patch"
            android:maxLength="15"


            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/searvh_linear_ed_text"
        >

        <LinearLayout
            android:id="@+id/linear_chapter_sections"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"


            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/search_section_title"
                android:gravity="center"
                android:textSize="15dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/search_chapter_title"
                android:gravity="center"
                android:textSize="15dp"
                android:background="@color/colorAccent"

                />

        </LinearLayout>

        <ListView
            android:id="@+id/lv_search"
            android:layout_below="@id/searvh_linear_ed_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"

            >


        </ListView>



    </LinearLayout>






</RelativeLayout>